--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <button type="submit">Submit</button>
 </form>
 
-<p id="msg"></p>
+<p id="message"></p>
 
 <script src="script.js"></script>
 </body>
