--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <form id="uploadForm">
   <label>Student Name:</label>
-  <input type="text" id="name" required>
+  <input type="text" id="studentId" required>
 
   <label>Student ID:</label>
-  <input type="text" id="sid" required>
+  <input type="file" id="fileInput" required>
 
   <label>Select Skill:</label>
   <select id="skill">
