--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <form id="uploadForm">
   <label>Student Name:</label>
-  <input type="text" id="studentId" required>
+  <input type="text" id="studentName" required>
 
   <label>Student ID:</label>
-  <input type="file" id="fileInput" required>
+  <input type="text" id="studentId" required>
 
   <label>Select Skill:</label>
   <select id="skill">
@@ -24,8 +24,8 @@
     <option>Speaking</option>
   </select>
 
-  <label>Upload Response (Image / Audio):</label>
-  <input type="file" id="file" required>
+  <label>Upload Written Response</label>
+  <input type="file" id="fileInput" required>
 
   <button type="submit">Submit</button>
 </form>
