--- a/teacher.html
+++ b/teacher.html
@@ -11,9 +11,11 @@
 
 <p>Student submissions are stored in Google Sheet.</p>
 
-<a href="PASTE_YOUR_GOOGLE_SHEET_LINK_HERE" target="_blank">
+<a href="https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID_HERE/edit" target="_blank">
 Open Student Records Sheet
 </a>
 
 </body>
 </html>
+
+
